--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,6 @@
   background-image: url("/imajes/places/ocean.jpg");
   background-position: center;
   background-size: cover;
-  position: absolute;
-  top: 0;
 }
 #hero-content {
   width: 900px;
@@ -17,6 +15,22 @@
   margin: 0 auto;
   position: relative;
   top: 200px;
+}
+#destinations {
+  display: flex;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 40px;
+}
+.destination {
+  margin: 0, 20px;
+}
+.destination img {
+  border-radius: 10px;
+  height: 200px;
+  width: 100%;
+  box-shadow: 2px, 4px, 8px, rgb(68, 67, 67);
+  object-fit: cover;
 }
 
 #hero-content h1 {
@@ -36,7 +50,7 @@
 }
 #hero-content a {
   text-decoration: none;
-  background-color: rgb(255,251,0);
+  background-color: rgb(255, 251, 0);
   padding: 12px 24px;
   color: black;
   font-size: 24px;
