--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,11 @@
 }
 #hero-content {
   width: 900px;
-  height: 200px;
   background-color: rgba(51, 47, 47, 0.8);
   box-shadow: 2px 4px 8px rgb(68, 67, 67);
   border-radius: 8px;
   text-align: center;
-  padding: 50px, 0px;
+  padding: 50px 0;
   margin: 0 auto;
   position: relative;
   top: 200px;
@@ -23,7 +22,7 @@
   margin-bottom: 40px;
 }
 .destination {
-  margin: 0, 20px;
+  margin: 0 20px;
 }
 .destination img {
   border-radius: 10px;
