--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,13 @@
   position: relative;
   top: 200px;
 }
+#highlights h2 {
+text-transform: uppercase;
+text-align: center;
+font-size: 40px;
+color: rgba(59,65,64);
+margin: 24 0;
+}
 #destinations {
   display: flex;
   width: 90%;
@@ -23,6 +30,7 @@
 }
 .destination {
   margin: 0 20px;
+  text-transform: uppercase;
 }
 .destination img {
   border-radius: 10px;
@@ -31,7 +39,15 @@
   box-shadow: 2px, 4px, 8px, rgb(68, 67, 67);
   object-fit: cover;
 }
-
+.destination p{
+  text-align: center;
+  font-size: 24px;
+  color: rgb(124,123,123);
+  margin: 20px 0;
+}
+.destination strong {
+  color: rgb(0, 160, 117);
+}
 #hero-content h1 {
   color: white;
   text-transform: uppercase;
