--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,16 @@
   position: relative;
   top: 200px;
 }
+#highlights {
+  padding: 24px;
+  background: linear-gradient(0deg, rgb(227, 255, 253), rgb(202, 243, 240));
+}
 #highlights h2 {
-text-transform: uppercase;
-text-align: center;
-font-size: 40px;
-color: rgba(59,65,64);
-margin: 24 0;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 40px;
+  color: rgba(59, 65, 64);
+  margin: 24 0;
 }
 #destinations {
   display: flex;
@@ -39,10 +43,10 @@ margin: 24 0;
   box-shadow: 2px, 4px, 8px, rgb(68, 67, 67);
   object-fit: cover;
 }
-.destination p{
+.destination p {
   text-align: center;
   font-size: 24px;
-  color: rgb(124,123,123);
+  color: rgb(124, 123, 123);
   margin: 20px 0;
 }
 .destination strong {
